--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
       <script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.2.1/angular-sanitize.min.js"></script>
       <script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.2.1/angular-animate.min.js"></script>
       <script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.2.1/angular-cookies.min.js"></script>
+      <script src="js/colibri.js"></script>
       <script src="js/app.js"></script>
       <script src="js/controllers.js"></script>
       <script src="js/services.js"></script>
